@@ -14,6 +14,7 @@
     <extension point="xbmc.addon.metadata">
         <news>
 [fix] notifications for some languages on Kodi 19
+[fix] searching for some languages
 [upd] use xbmcvfs.translatePath if available, clean up for Kodi 19
         </news>
         <assets>
