@@ -1,4 +1,5 @@
 [fix] notifications for some languages on Kodi 19
+[fix] searching for some languages
 [upd] use xbmcvfs.translatePath if available, clean up for Kodi 19
 
 6.8.4
